even more autotools fixes

--- a/src/lib/datahandler/Makefile.am
+++ b/src/lib/datahandler/Makefile.am
@@ -1,4 +1,4 @@
-datahandlerdir		= $(pkglibdir)/datahandler
+datahandlerdir		= $(pythondir)/revelation/datahandler
 datahandler_DATA	= \
 	__init__.py \
 	base.py \
