--- a/data/revelation.desktop
+++ b/data/revelation.desktop
@@ -4,7 +4,7 @@ GenericName=Password Manager
 Version=0.3.3
 Comment=Organize and secure your passwords
 Exec=revelation
-Icon=revelation.png
+Icon=revelation
 Terminal=false
 Type=Application
 Categories=GNOME;Application;Office;
