added util module, and moved much rewritten code to it

--- a/src/lib/__init__.py.in
+++ b/src/lib/__init__.py.in
@@ -24,7 +24,7 @@
 #
 
 
-import datahandler, misc, stock, entry, widget, data, io, dialog, sys
+import util, datahandler, misc, stock, entry, widget, data, io, dialog, sys
 
 APPNAME		= "Revelation"
 VERSION		= "@VERSION@"
