rewrote the data module, and added unit tests

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,13 +1,16 @@
 EXTRA_DIST= \
 	config.py \
+	data.py \
 	datahandler.py \
 	datahandler_fpm.py \
 	datahandler_rvl.py \
+	entry.py \
 	io.py \
 	util.py
 
 test:
 	python config.py -v
+	python data.py -v
 	python datahandler.py -v
 	python datahandler_fpm.py -v
 	python datahandler_rvl.py -v
