--- a/data/icons/48x48/Makefile.am
+++ b/data/icons/48x48/Makefile.am
@@ -1,6 +1,6 @@
 appicondir	= $(datadir)/icons/hicolor/48x48/apps
 appicon_DATA	= revelation.png
 
-mimeicondir	= $(datadir)/icons/hicolor/mimetype
+mimeicondir	= $(datadir)/icons/hicolor/48x48/mimetype
 mimeicon_DATA	= gnome-mime-application-x-revelation.png
 
