updated unit test Makefile

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,7 +3,10 @@ EXTRA_DIST= \
 	data.py \
 	datahandler.py \
 	datahandler_fpm.py \
+	datahandler_gpass.py \
+	datahandler_netrc.py \
 	datahandler_rvl.py \
+	datahandler_xhtml.py \
 	entry.py \
 	io.py \
 	util.py
@@ -13,7 +16,10 @@ check:
 	python data.py -v
 	python datahandler.py -v
 	python datahandler_fpm.py -v
+	python datahandler_gpass.py -v
+	python datahandler_netrc.py -v
 	python datahandler_rvl.py -v
+	python datahandler_xhtml.py -v
 	python entry.py -v
 	python io.py -v
 	python util.py -v
