set .desktop category to Utility

--- a/data/revelation.desktop
+++ b/data/revelation.desktop
@@ -8,7 +8,7 @@ Exec=revelation
 Icon=revelation
 Terminal=false
 Type=Application
-Categories=GNOME;Application;Office;
+Categories=GNOME;Application;Utility;
 StartupNotify=true
 MimeType=application/x-revelation;
 GenericName[en_US]=Password Manager
