wrote more ui module unit tests

--- a/data/mime/Makefile.am
+++ b/data/mime/Makefile.am
@@ -3,7 +3,7 @@ mimedir		= $(datadir)/mime/packages
 
 install-data-hook:
 if FDO_MIME
-	@if test -z "$(DESTDIR)"; then \
+	if test -z "$(DESTDIR)"; then \
 		$(UPDATE_MIME_DATABASE) "$(datadir)/mime"; \
 	fi
 endif
