--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -7,12 +7,12 @@ schemadir	= @GCONF_SCHEMA_FILE_DIR@
 schema_DATA	= revelation.schemas
 
 install-data-hook:
+if GCONF_SCHEMAS_INSTALL
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
 	$(GCONFTOOL) --makefile-install-rule $(schema_DATA)
+endif
 
-if FDO_MIME
-	if test -z "$(DESTDIR)"; then \
-		$(UPDATE_DESKTOP_DATABASE); \
-	fi
+if HAVE_FDO_DESKTOP
+	$(UPDATE_DESKTOP_DATABASE)
 endif
 
