--- a/data/mime/Makefile.am
+++ b/data/mime/Makefile.am
@@ -2,9 +2,7 @@ mime_DATA	= revelation.xml
 mimedir		= $(datadir)/mime/packages
 
 install-data-hook:
-if FDO_MIME
-	if test -z "$(DESTDIR)"; then \
-		$(UPDATE_MIME_DATABASE) "$(datadir)/mime"; \
-	fi
+if HAVE_FDO_MIME
+	$(UPDATE_MIME_DATABASE) "$(datadir)/mime"
 endif
 
