use PYTHON_INCLUDE, not PY_INCLUDE

--- a/wrap/Makefile.am
+++ b/wrap/Makefile.am
@@ -3,7 +3,7 @@ moduledir	= $(pythondir)/revelation
 CLEANFILES	= authmanager.c
 
 AM_LDFLAGS	= `pkg-config --libs gtk+-2.0 pygtk-2.0 libgnomeui-2.0 gnome-vfs-2.0 gnome-keyring-1`
-AM_CFLAGS	= `pkg-config --cflags gtk+-2.0 pygtk-2.0 libgnomeui-2.0 gnome-vfs-2.0 gnome-keyring-1` -fPIC -I${PY_INCLUDE} -I.
+AM_CFLAGS	= `pkg-config --cflags gtk+-2.0 pygtk-2.0 libgnomeui-2.0 gnome-vfs-2.0 gnome-keyring-1` -fPIC -I${PYTHON_INCLUDE} -I.
 
 authmanager.c: authmanager.defs authmanager.override
 	pygtk-codegen-2.0 --prefix authmanager \
